--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -130,6 +130,13 @@
             event.preventDefault();
         }
     });
+
+    document.getElementById('pclrForm').addEventListener('keydown', function (event) {
+        if (event.key === 'Enter' && event.target.tagName !== 'TEXTAREA') {
+            event.preventDefault();
+        }
+    });
+
 </script>
 
 
