--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -131,10 +131,12 @@
         }
     });
 
-    document.getElementById('pclrForm').addEventListener('keydown', function (event) {
-        if (event.key === 'Enter' && event.target.tagName !== 'TEXTAREA') {
-            event.preventDefault();
-        }
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('pclrForm').addEventListener('keydown', function (event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+            }
+        });
     });
 
 </script>
