--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -131,13 +131,12 @@
         }
     });
 
-    document.addEventListener('DOMContentLoaded', function () {
-        document.getElementById('pclrForm').addEventListener('keydown', function (event) {
-            if (event.key === 'Enter') {
-                event.preventDefault();
-            }
-        });
+    document.addEventListener('keydown', function (event) {
+        if (event.key === 'Enter') {
+            event.preventDefault();
+        }
     });
+
 
 </script>
 
