--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -88,6 +88,7 @@
 
         // Ensure reCAPTCHA has been completed
         if (!recaptchaResponse) {
+            grecaptcha.reset(); // Reset in case of an issue
             grecaptcha.execute(); // Manually trigger reCAPTCHA
             return false;
         }
@@ -102,40 +103,42 @@
                 dropdown.classList.add('disabled-dropdown');
             }
         });
-    });
 
-    document.getElementById('importanceToggle').addEventListener('change', function (event) {
-        const isEnabled = event.target.checked;
-        const importanceDropdowns = document.querySelectorAll('.importance-dropdown');
+        document.getElementById('pclrForm').addEventListener('submit', function (event) {
+            if (!validateForm()) {
+                event.preventDefault();
+            }
+        });
 
-        importanceDropdowns.forEach(function (dropdown) {
-            if (isEnabled) {
-                dropdown.removeAttribute('data-enabled');
-                dropdown.classList.remove('disabled-dropdown');
-            } else {
-                dropdown.setAttribute('data-enabled', 'false');
-                dropdown.classList.add('disabled-dropdown');
+        document.getElementById('importanceToggle').addEventListener('change', function (event) {
+            const isEnabled = event.target.checked;
+            const importanceDropdowns = document.querySelectorAll('.importance-dropdown');
+
+            importanceDropdowns.forEach(function (dropdown) {
+                if (isEnabled) {
+                    dropdown.removeAttribute('data-enabled');
+                    dropdown.classList.remove('disabled-dropdown');
+                } else {
+                    dropdown.setAttribute('data-enabled', 'false');
+                    dropdown.classList.add('disabled-dropdown');
+                }
+            });
+        });
+
+        document.addEventListener('mousedown', function (event) {
+            if (event.target.matches('.importance-dropdown[data-enabled="false"]')) {
+                event.preventDefault();
+            }
+        });
+
+        // Prevent form submission using Enter key
+        document.addEventListener('keydown', function (event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
             }
         });
     });
 
-    document.addEventListener('mousedown', function (event) {
-        if (event.target.matches('.importance-dropdown[data-enabled="false"]')) {
-            event.preventDefault();
-        }
-    });
-
-    document.getElementById('pclrForm').addEventListener('submit', function (event) {
-        if (!validateForm()) {
-            event.preventDefault();
-        }
-    });
-
-    document.addEventListener('keydown', function (event) {
-        if (event.key === 'Enter') {
-            event.preventDefault();
-        }
-    });
 
 
 </script>
