updated references in results.html

--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="button-container">
-    <a href="{{ url_for('index') }}" class="btn">Start New Diagnosis</a>
+    <a href="{{ url_for('diagnosis') }}" class="btn">Start New Diagnosis</a>
 </div>
 
 <style>
