fixed button alignment

--- a/frontend/templates/welcome.html
+++ b/frontend/templates/welcome.html
@@ -18,11 +18,8 @@
         align-items: center;
     }
     .center_button{
-        margin: 0;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
+        text-align: center;
+        margin-top: 20px; /* Adjust the margin as needed */
     }
 </style>
 
